# connectfour

./: .gitignore  CHANGELOG.md  README.md  cookiecutter-replay.json  environment.yml  noxfile.py  requirements-dev.txt  setup.cfg
src/: abstract.py  ai.py  batch_game.py  batch_policy.py  file_utils.py  game.py  main.py  mc_ts_ai.py  nn.py  play_state.py  policy.py  state_value.py  tests.py
src/connectfour/: __init__.py  abstract.py  board_parser.py  embedding_net.py  file_utils.py  game.py  io.py  main.py  mc_tree_search.py  minimax.py  nn.py  play_state.py  policy.py  rl_trainer.py  tf_main.py  tf_policy.py  train_main.py  utils.py  value_net.py  version.py
test/core/: test_dummy.py  test_embedding.py  test_mc_search.py  test_minimax.py  test_mutable_game_state.py  test_other.py  test_policy.py  test_value.py
