[metadata]
name = connectfour
author = David Li-Bland
author_email = david.libland@gmail.com
license = Proprietary
version = 0.0.0.dev0+local
license_file = LICENSE.md
long_description = file: README.md, CHANGELOG.md, LICENSE.md
url = https://github.com/davidlibland/connectfour
classifiers =
    Development Status :: 3 - Alpha
    License :: Other/Proprietary License
    Intended Audience :: Science/Research

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
# TODO: add package requirements here
    typing-extensions>=3.7.4.3; python_version < '3.8'
    importlib-metadata>=1.5.0 ; python_version < '3.8'

    # pytorch related stuff
    torch >= 2.0.0
    torch-vision
    pytorch-lightning >= 2.0.0
zip_safe = False

[options.packages.find]
include =
    connectfour*
where = src

[options.package_data]
# for any package, mark that we're exporting typehints
* =
    py.typed

[options.entry_points]
# See https://setuptools.readthedocs.io/en/latest/setuptools.html#automatic-script-creation
# and https://stackoverflow.com/a/48891252
console_scripts =
    # TODO: remove the these extras
    export-dm = demo.cli:export_dm
    print-sample = demo.cli:print_sample

[options.extras_require]
dev =
    nox>=2019.8.20
    packaging>=20.0.0
    dunamai>=1.0.0
    mypy
    black~=22.0
    isort>=5.7.0
    pylint>=2.4.4
    pylint-junit>=0.2.0
    pytest>=5.3.5
    pytest-cov>=2.8.1
    hypothesis[numpy]>=5.6.0
    twine
    build
